// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert Component > renders the default variant 1`] = `
"<div class="relative w-full rounded border border-zinc-200 p-3 [&>svg]:text-zinc-950 dark:border-zinc-800 dark:[&>svg]:text-zinc-50 flex text-left text-zinc-950 dark:bg-zinc-950 dark:text-zinc-50" role="alert">
  <div class="flex-shrink-0 mt-0.5 mr-3"><i class="pi pi-exclamation-circle"></i></div>
  <div class="flex flex-column">
    <!---->
    <!---->
  </div>
</div>"
`;

exports[`Alert Component > renders the error variant 1`] = `
"<div class="relative w-full rounded border p-3 flex text-left bg-red-50 border-red-500/50 text-red-500 [&>svg]:text-red-500 dark:border-red-900/50 dark:text-red-900 dark:dark:border-red-900 dark:[&>svg]:text-red-900" role="alert">
  <div class="flex-shrink-0 mt-0.5 mr-3"><i class="pi pi-exclamation-circle"></i></div>
  <div class="flex flex-column">
    <!---->
    <!---->
  </div>
</div>"
`;
